deployment.yaml
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: spring-k8s-demo
spec:

  replicas: 2 

  selector:
    matchLabels:
      app: spring-k8s-demo
  template:
    metadata:
      labels:
        app: spring-k8s-demo 
    spec:
      containers:
      - name: myapp
        image: zablondev/spring-k8s-demo:1.0
        ports:
         - containerPort: 8080 
         
        resources:
          requests:
            cpu: "500m"
            memory: "256Mi"
          limits:
            memory: "512Mi"
            cpu: "500m"
