service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: spring-k8s-service
spec:
  selector:
    app: spring-k8s-demo
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
