ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-k8s-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: spring.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-k8s-service
                port:
                  number: 80
